--- a/index.html
+++ b/index.html
@@ -67,16 +67,42 @@ nav{display:flex;align-items:center;gap:12px}
 .cards-row{display:flex;justify-content:center;gap:22px;flex-wrap:wrap;margin-bottom:20px;}
 .card{background:linear-gradient(180deg,rgba(11,19,30,0.78),rgba(8,12,18,0.7));border-radius:12px;border:1px solid rgba(255,255,255,0.04);box-shadow:0 10px 30px rgba(4,26,54,0.35);overflow:hidden;width:320px;max-width:90%;transition:transform .2s;display:flex;flex-direction:column;}
 .card:hover{transform:translateY(-4px)}
+/* =====================
+   CARD HEAD DESIGN (ELEGANT)
+   ===================== */
+
 .card-head {
   background: var(--navy);
-  padding: 16px 10px 20px;
+  padding: 16px 10px 22px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   text-align: center;
+  position: relative;
+  overflow: hidden;
 }
 
+/* Gradient berbeda untuk Reguler dan IBM */
+.card[data-type="reguler"] .card-head {
+  background: linear-gradient(180deg, #0f3556 0%, #0a2438 100%);
+}
+.card[data-type="ibm"] .card-head {
+  background: linear-gradient(180deg, #153b75 0%, #0c2850 100%);
+}
+
+/* Efek garis halus di bawah judul */
+.card-head::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 15%;
+  right: 15%;
+  height: 1px;
+  background: rgba(255,255,255,0.08);
+}
+
+/* Judul utama (Infrastruktur Sektor / IBM) */
 .card-head h4 {
-  font-size: 22px; /* headline besar */
+  font-size: 22px;
   font-weight: 900;
   color: var(--accent);
   margin: 0;
@@ -84,6 +110,7 @@ nav{display:flex;align-items:center;gap:12px}
   text-transform: uppercase;
 }
 
+/* Nama bidang / program */
 .card-head .title-line {
   display: block;
   font-size: 17px;
@@ -93,22 +120,27 @@ nav{display:flex;align-items:center;gap:12px}
   text-transform: capitalize;
 }
 
+/* Label kecil */
 .card-head .label-small {
   display: block;
   font-size: 12px;
   color: var(--muted);
   margin-top: 6px;
+  text-transform: uppercase;
 }
 
+/* Angka jumlah (kuning, besar, tebal) */
 .card-head .jumlah {
   display: block;
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 900;
-  color: var(--accent); /* warna kuning */
-  margin-top: 4px;
-  line-height: 1.1;
+  color: var(--accent);
+  margin-top: 2px;
+  line-height: 1.2;
+  text-shadow: 0 0 6px rgba(243,180,31,0.2);
 }
 
+/* Label investasi */
 .card-head .invest-label {
   display: block;
   font-size: 12px;
@@ -117,12 +149,19 @@ nav{display:flex;align-items:center;gap:12px}
   text-transform: uppercase;
 }
 
+/* Nilai investasi */
 .card-head .invest-value {
   display: block;
   font-size: 16px;
   font-weight: 700;
   color: var(--accent);
   margin-top: 2px;
+}
+
+/* Tambahkan sedikit efek hover */
+.card:hover .card-head {
+  transform: scale(1.01);
+  transition: transform 0.15s ease-in-out;
 }
   
 .body{padding:12px;background:rgba(255,255,255,0.02);display:flex;flex-direction:column;gap:8px;min-height:220px;justify-content:flex-start;}
